--- a/examples/javascript-config.toml
+++ b/examples/javascript-config.toml
@@ -8,14 +8,15 @@
 # ==============================================================================
 
 [llm]
+# LM Studio (default)
 backend = "lm-studio"   # Backend type: "lm-studio" or "ollama"
 host = "localhost"       # Server hostname (usually localhost)
 port = 1234              # Server port (LM Studio default: 1234, Ollama: 11434)
-model = "qwen2.5-coder-7b-instruct"  # Model identifier
-timeout = 300            # Request timeout in seconds (higher for complex code)
+model = "qwen2.5-coder-7b-instruct"  # Optional for LM Studio
+timeout = 600            # Request timeout in seconds
 context_limit = 16384    # Context window size in tokens (minimum 16384 recommended)
 
-# Ollama alternative:
+# Ollama alternative (uncomment and comment out LM Studio above):
 # backend = "ollama"     # Use Ollama backend
 # host = "localhost"
 # port = 11434           # Ollama default port
