Add context limit configuration to LLM settings and update tests
- Introduced a context limit parameter (default: 16384) in LLMConfig for better control over model input size.
- Updated various test files to include the new context limit in LLM configuration.
- Enhanced lock file handling in tests to check for running processes.
- Improved backup functionality in output file tests to ensure proper handling of existing files.
- Adjusted configuration loading tests to reflect changes in log and lock file paths.

--- a/.gitignore
+++ b/.gitignore
@@ -157,6 +157,7 @@ cython_debug/
 
 # Project-specific ignores
 code_scanner_results.md
+code_scanner_results.md.bak
 code-scanner-results.json
 code_scanner.log
 *.log
