feat: Enhance configuration checks across multiple project types and add issue parsing functionality in the scanner

--- a/examples/config.toml
+++ b/examples/config.toml
@@ -64,4 +64,16 @@ checks = [
     "Check for TODO or FIXME comments that have lingered too long.",
     "Check for duplicate implementations that should be consolidated.",
     "Check for opportunities to optimize algorithms and data structures.",
+    "Check that all changed code paths handle edge cases and error conditions correctly.",
+    "Check that the overall design fits the existing architecture and abstractions.",
+    "Check that complex logic is broken down into small, understandable units with clear responsibilities.",
+    "Check that names of variables, methods, and classes are clear, descriptive, and consistent.",
+    "Check for obvious performance issues like N+1 queries or unnecessary loops.",
+    "Check that database queries and external service calls are efficient and properly constrained.",
+    "Check that public APIs, configuration changes, or new behaviors are properly documented.",
+    "Check that comments and documentation are accurate, necessary, and up to date.",
+    "Check that logging and error messages are clear, informative, and follow project conventions.",
+    "Check that no sensitive data (keys, PII) is logged or exposed in output.",
+    "Check that configuration changes have safe, sensible defaults.",
+    "Check that feature flags are named consistently and reflect their purpose.",
 ]
