--- a/config.toml
+++ b/config.toml
@@ -23,29 +23,33 @@ checks = [
 pattern = "*"
 checks = [
     "Check for unused files or dead code.",
+    "Check that all changed code paths handle edge cases and error conditions correctly.",
+    "Check that the overall design fits the existing architecture and abstractions.",
+    "Check that complex logic is broken down into small, understandable units with clear responsibilities.",
+    "Check that names of variables, methods, and classes are clear, descriptive, and consistent.",
+    "Check for obvious performance issues like N+1 queries or unnecessary loops.",
+    "Check that database queries and external service calls are efficient and properly constrained.",
+    "Check that public APIs, configuration changes, or new behaviors are properly documented.",
+    "Check that comments and documentation are accurate, necessary, and up to date.",
+    "Check that logging and error messages are clear, informative, and follow project conventions.",
+    "Check that no sensitive data (keys, PII) is logged or exposed in output.",
+    "Check that configuration changes have safe, sensible defaults.",
+    "Check that feature flags are named consistently and reflect their purpose.",
 ]
 
-# LM Studio connection settings (optional - these are the defaults)
-# [llm]
-# host = "localhost"
-# port = 1234
-# model = "openai/gpt-oss-20b"  # Leave commented to use default model
-# timeout = 120
-# context_limit = 37000  # Context window size in tokens
-
 [llm]
-# -----------------------------------------------------------------------------
-# Option 1: Ollama (recommended for simplicity)
-# -----------------------------------------------------------------------------
-# Install: https://ollama.ai/download
-# Pull a model: ollama pull qwen3:4b
-# Start server: ollama serve (runs automatically on macOS/Linux)
-
-backend = "ollama"
+# LM Studio (default)
+backend = "lm-studio"
 host = "localhost"
-port = 11434
-model = "qwen3:4b"  # Required for Ollama
-timeout = 120
-# Optional: Override model's default context window
-# Only set this if you know the model supports it
-context_limit = 8192
+port = 1234
+# model = "qwen2.5-coder-7b-instruct"
+timeout = 600
+context_limit = 16384
+
+# Ollama alternative (uncomment to use)
+# backend = "ollama"
+# host = "localhost"
+# port = 11434
+# model = "qwen3:4b"  # Required for Ollama
+# timeout = 600
+# context_limit = 8192
