--- a/examples/java-config.toml
+++ b/examples/java-config.toml
@@ -74,4 +74,16 @@ checks = [
     "Check for outdated TODO or FIXME comments.",
     "Check for copy-paste code that should be refactored.",
     "Check that test code tests behavior instead of implementation details.",
+    "Check that all changed code paths handle edge cases and error conditions correctly.",
+    "Check that the overall design fits the existing architecture and abstractions.",
+    "Check that complex logic is broken down into small, understandable units with clear responsibilities.",
+    "Check that names of variables, methods, and classes are clear, descriptive, and consistent.",
+    "Check for obvious performance issues like N+1 queries or unnecessary loops.",
+    "Check that database queries and external service calls are efficient and properly constrained.",
+    "Check that public APIs, configuration changes, or new behaviors are properly documented.",
+    "Check that comments and documentation are accurate, necessary, and up to date.",
+    "Check that logging and error messages are clear, informative, and follow project conventions.",
+    "Check that no sensitive data (keys, PII) is logged or exposed in output.",
+    "Check that configuration changes have safe, sensible defaults.",
+    "Check that feature flags are named consistently and reflect their purpose.",
 ]
