--- a/examples/javascript-config.toml
+++ b/examples/javascript-config.toml
@@ -95,3 +95,25 @@ checks = [
     "Check for network waterfalls where sequential requests could be parallel.",
     "Check for opportunities to optimize algorithms and data structures.",
 ]
+
+[[checks]]
+pattern = "*"
+checks = [
+    "Check for entire files that are never imported or used.",
+    "Check for feature flags or conditional code for features that shipped long ago.",
+    "Check for commented-out code blocks larger than 3 lines.",
+    "Check for TODO or FIXME comments that appear outdated.",
+    "Check for duplicate implementations of similar logic across files.",
+    "Check that all changed code paths handle edge cases and error conditions correctly.",
+    "Check that the overall design fits the existing architecture and abstractions.",
+    "Check that complex logic is broken down into small, understandable units with clear responsibilities.",
+    "Check that names of variables, methods, and classes are clear, descriptive, and consistent.",
+    "Check for obvious performance issues like N+1 queries or unnecessary loops.",
+    "Check that database queries and external service calls are efficient and properly constrained.",
+    "Check that public APIs, configuration changes, or new behaviors are properly documented.",
+    "Check that comments and documentation are accurate, necessary, and up to date.",
+    "Check that logging and error messages are clear, informative, and follow project conventions.",
+    "Check that no sensitive data (keys, PII) is logged or exposed in output.",
+    "Check that configuration changes have safe, sensible defaults.",
+    "Check that feature flags are named consistently and reflect their purpose.",
+]
