Refactor tests to handle empty rules in config, create ignore patterns, and enhance coverage
- Updated `test_new_format_empty_rules` to verify creation of ignore patterns instead of raising errors.
- Enhanced coverage in `test_config_coverage.py` for handling empty checks and ignore patterns.
- Added tests for octal sequence decoding in `test_git_watcher_coverage.py`.
- Improved context limit detection in `test_lmstudio_client_coverage.py`.
- Adjusted tests in `test_scanner.py` and `test_scanner_coverage.py` for better handling of edge cases.
- Introduced integration tests for scanner with AI tools support in `test_scanner_tools_integration.py`.
- Ensured tool logging and error handling are robust in various scenarios.

--- a/config.toml
+++ b/config.toml
@@ -37,6 +37,12 @@ checks = [
     "Check that feature flags are named consistently and reflect their purpose.",
 ]
 
+# Ignore patterns - files matching these patterns will be skipped
+# (check groups with empty checks list act as ignore patterns)
+[[checks]]
+pattern = "*.md, *.txt, *.rst, *.html, *.json, *.toml, *.yaml, *.yml"
+checks = []
+
 [llm]
 # LM Studio (default)
 backend = "lm-studio"
