--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ classifiers = [
 dependencies = [
     "openai>=1.0.0",
     "gitpython>=3.1.0",
+    "pathspec>=0.11.0",  # For efficient gitignore pattern matching
 ]
 
 [project.optional-dependencies]
