--- a/examples/java-config.toml
+++ b/examples/java-config.toml
@@ -73,6 +73,7 @@ checks = [
     "Check for dead code or unused dependencies.",
     "Check for outdated TODO or FIXME comments.",
     "Check for copy-paste code that should be refactored.",
+    "Check for repeated code blocks that can be extracted into a separate function or method.",
     "Check that test code tests behavior instead of implementation details.",
     "Check that all changed code paths handle edge cases and error conditions correctly.",
     "Check that the overall design fits the existing architecture and abstractions.",
@@ -96,5 +97,5 @@ checks = [
 # Add or modify patterns as needed for your project.
 
 [[checks]]
-pattern = "*.md, *.txt, *.rst, *.html, *.json, *.toml, *.yaml, *.yml, /*test*/, /*tests*/, /*3rdparty*/, /*third_party*/, /*vendor*/, /*target*/, /*build*/, /*out*/"
+pattern = "*.md, *.txt, *.rst, *.html, *.json, *.toml, *.yaml, *.yml, /*test*/, /*tests*/, /*external*/, /*3rdparty*/, /*third_party*/, /*vendor*/, /*target*/, /*build*/, /*out*/"
 checks = []
